Fix title page.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Burton - BLOG
+title: SrBurton - BLOG
 description: "Is programming like an art, abstract or landscape? it depends on you ..."
 author:
   name: "SrBurton"
